# NoYesApp

./: .env.example  .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml
.claude/hooks/: skill-rules.json
docs/: noyesapp_plan.md  noyesapp_requirements.md  technical_spec.md
noyesapp/: asgi.py  backends.py  settings.py  urls.py  wsgi.py
noyesapp/actions/: invites.py  questionnaires.py  sessions.py  users.py
noyesapp/data/: admin.py  apps.py
noyesapp/data/migrations/: 0001_initial.py  0002_node_questionnaire_node_questionnaire_edge_and_more.py  0003_questionnairesession_noderesponse.py  0004_populate_site_and_flatpages.py  0005_access_type_and_invites.py
noyesapp/data/models/: __init__.py  edge.py  invite.py  node.py  profile.py  questionnaire.py  response.py  session.py  user.py
noyesapp/readers/: invites.py  questionnaires.py  sessions.py  users.py
noyesapp/settings/: base.py  dev.py  prod.py
static/css/: style.css
templates/: 404.html  500.html  base.html
templates/editor/: add_node.html  create_questionnaire.html  dashboard.html  delete_node.html  delete_questionnaire.html  edit_node.html  edit_questionnaire.html  forbidden.html  manage_invites.html
templates/flatpages/: default.html  landing.html
templates/player/: _node_partial.html  complete.html  error.html  forbidden.html  play_node.html
templates/registration/: login.html  register.html
tests/: factories.py  test_access_control.py  test_editor.py  test_invites.py  test_pages.py  test_player.py  test_questionnaires.py  test_smoke.py  test_users.py
(+4 files in other folders)
