[project]
name = "noyesapp"
version = "0.1.0"
description = "Directed-graph questionnaire app"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7.0",
    "psycopg[binary]>=3.2",
    "django-htmx>=1.21",
    "dj-database-url>=2.3",
    "django-crispy-forms>=2.3",
    "crispy-bootstrap5>=2024.10",
    "whitenoise>=6.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "factory-boy>=3.3",
    "ruff>=0.9",
    "pyright>=1.1",
    "django-stubs[compatible-mypy]>=5.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "DJ",   # flake8-django
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF012", # mutable class attributes (Django models use them)
]

[tool.ruff.lint.isort]
known-first-party = ["noyesapp"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["noyesapp", "tests"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "noyesapp.settings.dev"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
